@@ -1621,6 +1621,7 @@ please see math/README to configure.',
 'right-move'                 => 'Move pages',
 'right-move-subpages'        => 'Move pages with their subpages',
 'right-move-rootuserpages'   => 'Move root user pages',
+'right-movefile'             => 'Move files',
 'right-suppressredirect'     => 'Not create a redirect from the old name when moving a page',
 'right-upload'               => 'Upload files',
 'right-reupload'             => 'Overwrite an existing file',
@@ -2731,6 +2732,7 @@ In those cases, you will have to move or merge the page manually if desired.",
 'movenologin'                  => 'Not logged in',
 'movenologintext'              => 'You must be a registered user and [[Special:UserLogin|logged in]] to move a page.',
 'movenotallowed'               => 'You do not have permission to move pages.',
+'movenotallowedfile'           => 'You do not have permission to move files.',
 'cant-move-user-page'          => 'You do not have permission to move user pages (apart from subpages).',
 'cant-move-to-user-page'       => 'You do not have permission to move a page to a user page (except to a user subpage).',
 'newtitle'                     => 'To new title:',
